Corrections from the first pull request done
Putting Logo in a tag

Main Section Background Resolved

Social Media Icon Moved to ul>li tag

Unwanted Margin Removed

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,12 +1,12 @@
 
 /* Mobile View */
 @media all and (max-width: 375px) {
-   header {
+  header {
     position: absolute;
-    left: 0px;
-    right: 0px;
+    left: 0;
+    right: 0;
     top: 44px;
-    bottom: 0px;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
   }
@@ -25,7 +25,7 @@
   #logo {
     width: 76px;
     height: 20px;
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
@@ -34,7 +34,7 @@
     align-items: center;
     text-align: center;
     text-decoration: none;
-    color: #6070FF;
+    color: #6070ff;
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -83,7 +83,7 @@
     position: absolute;
     width: 375px;
     height: 604px;
-    left: calc(50% - 375px/2);
+    left: calc(50% - 375px / 2);
   }
 
   #profile-header h1 {
